--- a/WarehouseEcommerce/Views/Theme/Smart/Orders/_AddressDetail.cshtml
+++ b/WarehouseEcommerce/Views/Theme/Smart/Orders/_AddressDetail.cshtml
@@ -1,4 +1,5 @@
-﻿<p class="address">
+﻿
+<p class="address">
     @if (!string.IsNullOrEmpty(Model.AddressLine1))
     {
         <b>@Model.AddressLine1</b><br />
