--- a/WarehouseEcommerce/Views/Theme/University/Orders/_OrderProgressBar.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Orders/_OrderProgressBar.cshtml
@@ -1,5 +1,6 @@
-﻿@using Ganedata.Core.Entities.Enums;
+﻿
 @model Ganedata.Core.Entities.Enums.OrderProgressStep
+@using Ganedata.Core.Entities.Enums;
 
 <div class="progressBarStep ordConfirmationPgStepsec">
     <ul id="progressList">
