--- a/WarehouseEcommerce/Views/Theme/University/Shared/_CartItemsPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_CartItemsPartial.cshtml
@@ -12,7 +12,7 @@
                 </button>
             </div>
             <div class="modal-body billandshipsec">
-                @Html.Partial("~/Views/Theme/University/Orders/_CollectionPoint.cshtml")
+                @*@Html.Partial("~/Views/Theme/University/Orders/_CollectionPoint.cshtml")*@
             </div>
         </div>
     </div>
@@ -310,6 +310,7 @@
                         }
                     }
                     <button class="btmbtn sho">CONTINUE SHOPPING</button>
+                    
                 </div>
             </div>
         </div>
