--- a/WMS/Views/Theme/Default/UISettings/WebsiteUISettings.cshtml
+++ b/WMS/Views/Theme/Default/UISettings/WebsiteUISettings.cshtml
@@ -45,13 +45,14 @@
                         @Html.TextBoxFor(m => m[i].Value, new
                         {
                             @type = (Model[i].UISettingItem.InputType == UISettingItemInputType.Color ? "Text" : Enum.GetName(typeof(UISettingItemInputType), Model[i].UISettingItem.InputType)),
-                                                                @class = Model[i].UISettingItem.InputType == UISettingItemInputType.Color ? "jscolor {hash:true, padding:4} form-control" : "form-control"
+                                                                @class = Model[i].UISettingItem.InputType == UISettingItemInputType.Color ? "jscolor {hash:true, padding:4} form-control" : "form-control",
+                                                                @id = "attribute_" + Model[i].UISettingItem.DisplayName.ToLower().Replace(" ", "_")
                         })
                     }
                     else
                     {
                         @Html.DropDownListFor(m => m[i].Value, new SelectList(Enum.GetValues(typeof(UISettingFonts)).Cast<UISettingFonts>().Select(v => new { Value = v.ToString() }).ToList(), "Value", "Value", Model[i].Value),
-                                                                new { @class = "chosen-select form-control" })
+                                                                new { @class = "chosen-select form-control", @id = "attribute_id_" + Model[i].UISettingItem.DisplayName.ToLower().Replace(" ", "_") })
                     }
                 </div>
                 @Html.ValidationMessageFor(model => model[i].Value, "The " + Model[i].UISettingItem.DisplayName + " field value is required.", new { @class = "col-md-12 text-danger" })
