--- a/WarehouseEcommerce/Views/Theme/University/Shared/_HorizontalNavbarPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_HorizontalNavbarPartial.cshtml
@@ -90,7 +90,7 @@
                 if (level1.Any())
                 {
                     <li class="hav_mega_nav">
-                        <a href="@Url.Action("page", "Home", new { pageUrl = item.WebsiteContentPages.pageUrl })">
+                        <a href="@Url.Action("page", "Home", new { pageUrl = item.WebsiteContentPages?.pageUrl })">
                             @item.Name
                         </a>
                         <div class="mega_nav_wrap">
@@ -104,7 +104,7 @@
                                         if (i == 1)
                                         {
                                             <li data-image-nav-src="@item.Image">
-                                                <a href="@Url.Action("page", "Home", new { pageUrl = item1.WebsiteContentPages.pageUrl })">
+                                                <a href="@Url.Action("page", "Home", new { pageUrl = item1.WebsiteContentPages?.pageUrl })">
                                                     @item1.Name
                                                 </a>
                                                 @if (level2.Any())
@@ -113,7 +113,7 @@
                                                         @foreach (var item2 in level2)
                                                         {
 
-                                                            <li><a href="@Url.Action("page", "Home", new { pageUrl = item2.WebsiteContentPages.pageUrl })">@item2.Name</a></li>
+                                                            <li><a href="@Url.Action("page", "Home", new { pageUrl = item2.WebsiteContentPages?.pageUrl })">@item2.Name</a></li>
 
 
 
@@ -158,7 +158,7 @@
                 {
 
                     <li>
-                        <a href="@Url.Action("page", "Home", new { pageUrl = item.WebsiteContentPages.pageUrl })">
+                        <a href="@Url.Action("page", "Home", new { pageUrl = item.WebsiteContentPages?.pageUrl })">
                             @item.Name
                         </a>
                     </li>
