--- a/WarehouseEcommerce/Views/Theme/University/Orders/_OrderProgressBar.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Orders/_OrderProgressBar.cshtml
@@ -1,5 +1,4 @@
-﻿
-@model Ganedata.Core.Entities.Enums.OrderProgressStep
+﻿@model Ganedata.Core.Entities.Enums.OrderProgressStep
 @using Ganedata.Core.Entities.Enums;
 
 <div class="progressBarStep ordConfirmationPgStepsec">
