--- a/WarehouseEcommerce/Views/Theme/University/Orders/_ShipmentRule.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Orders/_ShipmentRule.cshtml
@@ -18,5 +18,7 @@
     }
     <div class="btnWrap">
         <a href="javascript:;" class="addnwShopAdrrbtn" onclick="chooseShippingRule(@((int)CheckoutStep.PaymentMethod))">SELECT SHIPMENT TYPE</a>
+        <a href="@Url.Action("checkout","orders",new{ checkoutStep=CheckoutStep.ShippingAddress})" class="btn btmBtn">Back</a>
+
     </div>
 </div>
