--- a/WarehouseEcommerce/Views/Theme/Smart/Orders/_ShippingAddress.cshtml
+++ b/WarehouseEcommerce/Views/Theme/Smart/Orders/_ShippingAddress.cshtml
@@ -15,9 +15,15 @@
             {
                 @Html.Partial("_AddressDetail", address[i])
                 <div class="btnWrap">
-                    <a href="@Url.Action("Checkout", "Orders", new { accountId = Model.AccountId, billingAddressId = Model.BillingAddressId, deliveryMethodId = Model.DeliveryMethodId, step = (int)CheckoutStep.ShipmentRule, shippingAddressId = address[i].AddressID })" class="btmBtn">Select Address</a>
-                    <a href="@Url.Action("Checkout", "Orders", new { accountId = address[i].AccountID, billingAddressId = Model.BillingAddressId, deliveryMethodId = Model.DeliveryMethodId, step = (int)CheckoutStep.AddOrEditAddress, accountAddressId = address[i].AddressID, parentStep = (int)CheckoutStep.ShippingAddress })" class="btmBtn">Edit Address</a>
-                    <a href="@Url.Action("RemoveShippingAddress", "Orders", new { accountId = address[i].AccountID, billingAddressId = Model.BillingAddressId, deliveryMethodId = Model.DeliveryMethodId, accountAddressId = address[i].AddressID })" class="btmBtn">Remove Address</a>
+                    
+                    <a href="javascript:;" data-AccountId="@(Model.AccountId??null)" data-billingAddressId="@(Model.BillingAddressId)" data-ShippingAddressId="@(address[i].AddressID)" data-currentstep="@((int) CheckoutStep.ShipmentRule)" data-deliveryMethodId="@(Model.DeliveryMethodId??null)" onclick="moveToNextStep(this)" class="btmBtn">
+                        Select Address
+                    </a>
+                    <a href="javascript:;" data-AccountId="@(Model.AccountId??null)" data-billingAddressId="@(Model.BillingAddressId)" data-accountAddressId="@(address[i].AddressID)" data-currentstep="@((int)CheckoutStep.AddOrEditAddress)" data-deliveryMethodId="@(Model.DeliveryMethodId??null)" data-parentStep="@((int) CheckoutStep.ShippingAddress)" onclick="moveToNextStep(this)" class="btmBtn">
+                        Edit Address
+                    </a>
+
+                    <a href="@Url.Action("RemoveShippingAddress", "Orders", new {accountId = address[i].AccountID, billingAddressId = Model.BillingAddressId, deliveryMethodId = Model.DeliveryMethodId, accountAddressId = address[i].AddressID})" class="btmBtn">Remove Address</a>
                 </div>
             }
         }
