--- a/WarehouseEcommerce/Views/Theme/University/Orders/_DeliveryMethod.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Orders/_DeliveryMethod.cshtml
@@ -20,6 +20,6 @@
     </div>
     <button class="addnwShopAdrrbtn" onclick="chooseDeliveryMethod()">SELECT DELIVERY METHOD</button>
 
-        <a href="@Url.Action("checkout","orders",new{ checkoutStep=Model.ParentStep})" class=" btn addnwShopAdrrbtn">Back</a>
+        <a href="@Url.Action("checkout","orders",new{ checkoutStep=CheckoutStep.BillingAddress})" class="btn addnwShopAdrrbtn">Back</a>
     
 </div>
