minor fixes Imported from Changeset 2658

--- a/WarehouseEcommerce/Views/Theme/University/Shared/_LoginRegisterPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_LoginRegisterPartial.cshtml
@@ -8,6 +8,7 @@
                     aria-label="Close">
                 <span aria-hidden="true">&times;</span>
             </button>
+            <h5 class="success-message-reg text-success"></h5>
             <div class="login_form_sec show">
                 <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLabel">Login</h5>
