--- a/WarehouseEcommerce/Views/Theme/University/Shared/_CartItemsPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_CartItemsPartial.cshtml
@@ -1,4 +1,7 @@
 ﻿@model List<Ganedata.Core.Entities.Domain.OrderDetailSessionViewModel>
+@{
+    var firstItem = Model.FirstOrDefault();
+}
 
 
 <!-- Modal -->
@@ -272,7 +275,7 @@
                                 <td class="price"></td>
                                 <td class="qty subtotalCell" colspan="2">
                                     <div class="subtotalCellInner">
-                                        <span>Sub Total</span> <span>@(Model==null?"":Model.FirstOrDefault()?.CurrencySign) @(Model.FirstOrDefault()?.TotalAmount)</span>
+                                        <span>Sub Total</span> <span>@(Model==null?"":firstItem?.CurrencySign) @(firstItem?.TotalAmount)</span>
                                     </div>
                                 </td>
 
@@ -292,17 +295,17 @@
                                        placeholder="Enter your promotional code" />
                                 <button class="applBtn">Apply</button>
                             </div>
-                            <div class="total">Total <span>@(Model==null?"":Model.FirstOrDefault().CurrencySign) @(Model.FirstOrDefault().TotalAmount)</span></div>
+                            <div class="total">Total <span>@(Model==null?"":firstItem?.CurrencySign) @(firstItem?.TotalAmount)</span></div>
                         </div>
                     </div>*@
 
                 <div class="botomBtnsec">
 
-                    @if (Model.Count > 0 && Model != null && (!Model.FirstOrDefault().ShowCartPopUp) )
+                    @if (Model.Count > 0 && Model != null && (firstItem?.ShowCartPopUp != true) )
                     {
-                        if (Model != null && Model.FirstOrDefault().ShowLoginPopUp)
+                        if (Model != null && firstItem?.ShowLoginPopUp == true)
                         {
-                            var popup =(bool?)Model.FirstOrDefault().ShowLoginPopUp;
+                            var popup =(bool?)firstItem?.ShowLoginPopUp;
                             <button class="btmbtn pro" onclick="GetLoggedIn('@popup')">PROCEED TO CHECKOUT</button>
                         }
                         else
